--- a/config/ABCD_Test/E6/ABCD_E6_tau-1_Tp1.cfg
+++ b/config/ABCD_Test/E6/ABCD_E6_tau-1_Tp1.cfg
@@ -1,51 +1,48 @@
 [GMN]
+mode = Generate
+predictionStart = 700
 predictionLength = 300
-predictionStart  = 700
-outPath          = ../output/ABCD_Network_4D
-dataOutCSV       = 
-showPlot         = False
-plotFile         = ABCD_E6_tau-1_Tp1.png
-plotType         = state
-plotColumns      = Out A B C D
+outPath = ./
+dataOutCSV = ABCD_E6_tau-1_Tp1.csv
+showPlot = False
+plotType = state
+plotColumns = Out A B C D
+plotFile = ABCD_E6_tau-1_Tp1.png
 
 [Network]
-name       = ABCD 4 Driver
+name = 
 targetNode = Out
-path       = ../network/ABCD_Test/
-file       = ABCD_Network_E3_T0_tau-1_rhoDiff.pkl
-data       = ../data/TestData_ABCD.csv
+file = ../network/ABCD_Test/ABCD_Network_E3_T0_tau-1_CMI.pkl
+data = ../data/TestData_ABCD.csv
 
 [Node]
-info       = Node description
-# If node.cfg in Network.path, Node.data replaces Network.data
-data       = ../data/TestData_ABCD.csv
-function   = Simplex
+info = Node description
+function = Simplex
+data = 
+configPath = 
 
 [EDM]
-# lib & pred are set to lib = [1, N-(E-1)tau]; pred = [N-1, N]
-# where N = Network.predictionStart; unless overriden here:
-lib             = 
-pred            = 
-E               = 6
-Tp              = 1
-knn             = 0
-tau             = -1
-theta           = 3
+lib = 
+pred = 
+E = 6
+Tp = 1
+knn = 0
+tau = -1
+theta = 3
 exclusionRadius = 0
-# columns are set to node inputs plus the node itself
-# target to the node itself; unless overriden here:
-columns         = 
-target          = 
-solver          = 
-embedded        = False
-validLib        = 
-generateSteps   = 0
-libSizes        = 
-sample          = 0
-random          = False
-includeData     = False
-seed            = 0
+columns = 
+target = 
+solver = 
+embedded = False
+validLib = 
+generateSteps = 0
+libSizes = 
+sample = 0
+random = False
+includeData = False
+seed = 0
 
 [Scale]
-factor          = 1
-offset          = 0
+factor = 1
+offset = 0
+
