--- a/config/default.cfg
+++ b/config/default.cfg
@@ -1,25 +1,26 @@
 [GMN]
-predictionLength = 300
+mode             = Generate
 predictionStart  = 700
+predictionLength = 300
 outPath          = ../output
 dataOutCSV       =
 showPlot         = True
-plotFile         =
 plotType         = state
 plotColumns      = Out A B C D
+plotFile         =
 
 [Network]
 name       = ABCD 4 Driver
 targetNode = Out
-path       = ../network/ABCD_Test/
-file       = ABCD_Network_E3_T0_tau-1_CMI.pkl
+file       = ../network/ABCD_Test/ABCD_Network_E3_T0_tau-1_CMI.pkl
 data       = ../data/TestData_ABCD.csv
 
 [Node]
 info       = Node description
-# If node.cfg in Network.path, Node.data replaces Network.data
-data       = ../data/TestData_ABCD.csv
 function   = Simplex
+# If node.cfg found in configPath: read config, Node.data replaces Network.data
+configPath = 
+data       = 
 
 [EDM]
 # lib & pred are set to lib = [1, N-(E-1)tau]; pred = [N-1, N]
