--- a/tests/A.cfg
+++ b/tests/A.cfg
@@ -1,21 +1,10 @@
-## Parameters
-
-The `GMN.Parameters` object is a mapping of configuration file parameters. A single configuration file can be provided in the `GMN` constructor or command line argument in which case each `Node` in the `Network` will inherit the same configuration file and parameters.
-
-If a `Network` `Node` is named `node_1` and if a file named `node_1.cfg` is found in the `Network.path`, then `node_1` will load the `node_1.cfg` file defining the `Node` parameters. 
-
- `[EDM]` parameters are defined in [EDM Parameters](https://sugiharalab.github.io/EDM_Documentation/parameters/).
-
-### Configuration File
-
-```python
 [GMN]
 mode             = Generate
 predictionStart  = 700
 predictionLength = 300
 outPath          = ../output
 dataOutCSV       =
-showPlot         = True
+showPlot         = False
 plotType         = state
 plotColumns      = Out A B C D
 plotFile         =
@@ -30,8 +19,8 @@ data       = ../data/TestData_ABCD.csv
 info       = Node description
 function   = Simplex
 # If node.cfg found in configPath: read config, Node.data replaces Network.data
-configPath = 
-data       = 
+configPath = ../tests/
+data       = ../data/TestData_ABCD_A1.csv
 
 [EDM]
 # lib & pred are set to lib = [1, N-(E-1)tau]; pred = [N-1, N]
@@ -61,4 +50,3 @@ seed            = 0
 [Scale]
 factor          = 1
 offset          = 0
-```
