--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ build-backend = "pdm.pep517.api"
 
 [project]
 name    = "gmn"
-version = "1.1.0"
+version = "1.1.1"
 authors = [
   { name = "Joseph Park", email = "JosephPark@IEEE.org" },
-  { name = "Gerald Pao",  email = "GERALD.PAO@OIST.JP"  },
+  { name = "Gerald Pao",  email = "Gerald.Pao@OIST.jp"  },
 ]
 description = "Generative Manifold Networks"
 readme      = "README.md"
