--- a/tests/gmn_forecast1.cfg
+++ b/tests/gmn_forecast1.cfg
@@ -2,7 +2,7 @@
 mode             = Forecast
 predictionStart  = 0
 predictionLength = 0
-outPath          = ../output
+outPath          = ../output/
 dataOutCSV       =
 showPlot         = False
 plotType         = state
