--- a/config/ABCD_Test/E6/ABCD_E6_tau-2_Tp1.cfg
+++ b/config/ABCD_Test/E6/ABCD_E6_tau-2_Tp1.cfg
@@ -3,7 +3,7 @@ mode = Generate
 predictionStart = 700
 predictionLength = 300
 outPath = ./
-dataOutCSV = ABCD_E6_tau-2_Tp1.csv
+dataOutFile = ABCD_E6_tau-2_Tp1.csv
 showPlot = False
 plotType = state
 plotColumns = Out A B C D
