--- a/tests/gmn_forecast1.cfg
+++ b/tests/gmn_forecast1.cfg
@@ -3,7 +3,7 @@ mode             = Forecast
 predictionStart  = 0
 predictionLength = 0
 outPath          = ../output/
-dataOutCSV       =
+dataOutFile      =
 showPlot         = False
 plotType         = state
 plotColumns      = Out A B C D
