--- a/config/ABCD_Test/E7/ABCD_E7_tau-1_Tp1.cfg
+++ b/config/ABCD_Test/E7/ABCD_E7_tau-1_Tp1.cfg
@@ -3,7 +3,7 @@ mode = Generate
 predictionStart = 700
 predictionLength = 300
 outPath = ./
-dataOutCSV = ABCD_E7_tau-1_Tp1.csv
+dataOutFile = ABCD_E7_tau-1_Tp1.csv
 showPlot = False
 plotType = state
 plotColumns = Out A B C D
