--- a/config/default-kedm.cfg
+++ b/config/default-kedm.cfg
@@ -3,7 +3,7 @@ mode             = Generate
 predictionStart  = 700
 predictionLength = 300
 outPath          = ../output
-dataOutCSV       =
+dataOutFile      =
 showPlot         = True
 plotType         = state
 plotColumns      = Out A B C D
