--- a/config/test.cfg
+++ b/config/test.cfg
@@ -3,7 +3,7 @@ mode             = Generate
 predictionStart  = 700
 predictionLength = 2
 outPath          = ../output
-dataOutCSV       =
+dataOutFile      =
 showPlot         = False
 plotType         = state
 plotColumns      = Out A B C D
