--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
 [build-system]
-requires = ["pdm-pep517", "networkx>=3.0", "pandas>=2.0",
-            "pyEDM>=2.1.0", "numpy", "matplotlib", "scikit-learn" ]
-build-backend = "pdm.pep517.api"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
 
 [project]
 name    = "gmn"
-version = "1.4.0"
+version = "1.4.1"
 authors = [
   { name = "Joseph Park", email = "JosephPark@IEEE.org" },
   { name = "Gerald Pao",  email = "Gerald.Pao@OIST.jp"  },
@@ -13,6 +12,15 @@ authors = [
 description = "Generative Manifold Networks"
 readme      = "README.md"
 requires-python = ">=3.10"
+dependencies = [
+  "pyEDM>=2.1.0",
+  "networkx>=3.0",
+  "pandas>=2.0",
+  "pyarrow",
+  "numpy",
+  "matplotlib",
+  "scikit-learn",
+]
 classifiers = [
   "Programming Language :: Python :: 3",
   "License :: Free For Educational Use",
