--- a/tests/gmn_test_readNode.cfg
+++ b/tests/gmn_test_readNode.cfg
@@ -3,7 +3,7 @@ mode             = Generate
 predictionStart  = 700
 predictionLength = 300
 outPath          = ../output
-dataOutCSV       =
+dataOutFile      =
 showPlot         = False
 plotType         = state
 plotColumns      = Out A B C D
