--- a/config/default-SMap.cfg
+++ b/config/default-SMap.cfg
@@ -38,6 +38,9 @@ exclusionRadius = 0
 columns         = 
 target          = 
 solver          = 
+# embedded False : node input is mixed-multivariate according to E,tau
+# embedded True  : node input is multivariate no time delays
+# SMap multivariate requires embedded True
 embedded        = True
 validLib        = 
 generateSteps   = 0
