--- a/config/default.cfg
+++ b/config/default.cfg
@@ -37,7 +37,9 @@ exclusionRadius = 0
 # target to the node itself; unless overriden here:
 columns         = 
 target          = 
-solver          = 
+solver          =
+# embedded False : node input is mixed-multivariate according to E,tau
+# embedded True  : node input is multivariate no time delays
 embedded        = False
 validLib        = 
 generateSteps   = 0
