--- a/config/default-kedm.cfg
+++ b/config/default-kedm.cfg
@@ -38,6 +38,8 @@ exclusionRadius = 0
 columns         = 
 target          = 
 solver          = 
+# embedded False : node input is mixed-multivariate according to E,tau
+# embedded True  : node input is multivariate no time delays
 embedded        = False
 validLib        = 
 generateSteps   = 0
