--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,15 @@ build-backend = "pdm.backend"
 
 [project]
 name    = "gmn"
-version = "1.4.2"
+version = "1.4.3"
+date    = "2025-10-23"
 authors = [
   { name = "Joseph Park", email = "JosephPark@IEEE.org" },
   { name = "Gerald Pao",  email = "Gerald.Pao@OIST.jp"  },
 ]
 description = "Generative Manifold Networks"
 readme      = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
   "pyEDM>=2.1.0",
   "networkx>=3.0",
